# hypNITRO

./: CMakeLists.txt  LICENSE.txt  README.md  ROADMAP.md  meson.build
.github/workflows/: main.yml  meson.yml
docs/: index.html
misc/: sdl2.pc  vulkan.pc
src/: CMakeLists.txt  arm.hpp  bank.hpp  bits.hpp  debug.hpp  meson.build  tags  types.hpp
src/interface/: cli.cpp  test.cpp  test.nds
